update css index

--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
     <main>
       <!-- Hero -->
       <section class="hero section container">
-        <h1 class="hero-title">
-          Ефективні рішення для <br />
-          вашого бізнесу
-        </h1>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="button">
           <span class="text-button">Замовити послугу</span>
         </button>
