--- a/index.html
+++ b/index.html
@@ -34,12 +34,18 @@
         <!-- Contakt -->
         <ul class="contakt-nav list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="contakt"
+            <a class="contakt-mail" href="mailto:info@devstudio.com"
+              ><svg class="mail">
+                <use href="./imeges/symbol-defs.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="contakt">+38 096 111 11 11</a>
+            <a class="contakt-tel" href="tel:+380961111111">
+              <svg class="tel">
+                <use href="./imeges/symbol-defs.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </nav>
@@ -57,7 +63,10 @@
         <h2 hidden>Приклади робіт</h2>
         <div class="container feature">
           <ul class="feature-list list">
-            <li class="item">
+            <li class="item icon-item">
+              <svg class="fonts">
+                <use href="./imeges/symbol-defs.svg#icon-antenna"></use>
+              </svg>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="feature-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -65,6 +74,9 @@
               </p>
             </li>
             <li class="item">
+              <svg class="fonts">
+                <use href="./imeges/symbol-defs.svg#icon-clock"></use>
+              </svg>
               <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="feature-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -72,12 +84,18 @@
               </p>
             </li>
             <li class="item">
+              <svg class="fonts">
+                <use href="./imeges/symbol-defs.svg#icon-diagram"></use>
+              </svg>
               <h3 class="title">ПЛАНУВАННЯ</h3>
               <p class="feature-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="item">
+              <svg class="fonts">
+                <use href="./imeges/symbol-defs.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="feature-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -173,6 +191,54 @@
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p class="team-prof"><span lang="en"> UI Designer </span></p>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Clients -->
+      <section class="section">
+        <div class="container">
+          <h2 hidden>Клієнти</h2>
+          <h3 class="title-clients">Постійні клієнти</h3>
+          <ul class="icon-list list">
+            <li class="icon-clients">
+              <a class="icon-link" href="">
+                <svg class="icon">
+                  <use href="./imeges/symbol-defs.svg#icon-yaco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-clients">
+              <a href=""
+                ><svg class="icon">
+                  <use
+                    href="./imeges/symbol-defs.svg#icon-teglinecompany"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="icon-clients">
+              <a href="">
+                <svg class="icon">
+                  <use href="./imeges/symbol-defs.svg#icon-company"></use></svg
+              ></a>
+            </li>
+            <li class="icon-clients">
+              <a href=""
+                ><svg class="icon">
+                  <use href="./imeges/symbol-defs.svg#icon-foster"></use></svg
+              ></a>
+            </li>
+            <li class="icon-clients">
+              <a href="">
+                <svg class="icon">
+                  <use href="./imeges/symbol-defs.svg#icon-brand"></use></svg
+              ></a>
+            </li>
+            <li class="icon-clients">
+              <a href=""
+                ><svg class="icon">
+                  <use href="./imeges/symbol-defs.svg#icon-tagline"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
