--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,18 @@
         <!-- Contakt -->
         <ul class="contakt-nav list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="contakt"
+            <a class="contakt-mail" href="mailto:info@devstudio.com"
+              ><svg class="mail">
+                <use href="./imeges/symbol-defs.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="contakt">+38 096 111 11 11</a>
+            <a class="contakt-tel" href="tel:+380961111111">
+              <svg class="tel">
+                <use href="./imeges/symbol-defs.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </nav>
