добавил иконки к команде и стили

--- a/index.html
+++ b/index.html
@@ -150,9 +150,42 @@
                 <p class="team-prof">
                   <span lang="en"> Product Designer</span>
                 </p>
+                <ul class="social list">
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-instagram2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-twitter2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-facebook2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-linkedin2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
-
             <li class="item">
               <div class="backgr-color">
                 <img
@@ -165,6 +198,40 @@
                 <p class="team-prof">
                   <span lang="en"> Frontend Developer </span>
                 </p>
+                <ul class="social list">
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-instagram2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-twitter2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-facebook2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-linkedin2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -178,6 +245,40 @@
                 />
                 <h3 class="team-name">Микола Тарасов</h3>
                 <p class="team-prof"><span lang="en"> Marketing </span></p>
+                <ul class="social list">
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-instagram2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-twitter2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-facebook2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-linkedin2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -190,6 +291,40 @@
                 />
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p class="team-prof"><span lang="en"> UI Designer </span></p>
+                <ul class="social list">
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-instagram2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-twitter2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-facebook2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="icon-social">
+                    <a class="icon-link" href="#"
+                      ><svg class="social-icon">
+                        <use
+                          href="./imeges/symbol-defs.svg#icon-linkedin2"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -202,14 +337,14 @@
           <h3 class="title-clients">Постійні клієнти</h3>
           <ul class="icon-list list">
             <li class="icon-clients">
-              <a class="icon-link" href="">
+              <a href="#">
                 <svg class="icon">
                   <use href="./imeges/symbol-defs.svg#icon-yaco"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-clients">
-              <a href=""
+              <a href="#"
                 ><svg class="icon">
                   <use
                     href="./imeges/symbol-defs.svg#icon-teglinecompany"
@@ -217,25 +352,25 @@
               ></a>
             </li>
             <li class="icon-clients">
-              <a href="">
+              <a href="#">
                 <svg class="icon">
                   <use href="./imeges/symbol-defs.svg#icon-company"></use></svg
               ></a>
             </li>
             <li class="icon-clients">
-              <a href=""
+              <a href="#"
                 ><svg class="icon">
                   <use href="./imeges/symbol-defs.svg#icon-foster"></use></svg
               ></a>
             </li>
             <li class="icon-clients">
-              <a href="">
+              <a href="#">
                 <svg class="icon">
                   <use href="./imeges/symbol-defs.svg#icon-brand"></use></svg
               ></a>
             </li>
             <li class="icon-clients">
-              <a href=""
+              <a href="#"
                 ><svg class="icon">
                   <use href="./imeges/symbol-defs.svg#icon-tagline"></use></svg
               ></a>
@@ -270,6 +405,41 @@
             </li>
           </ul>
         </address>
+        <div class="footer-container container">
+          <p class="footer-title-social">приєднуйтесь</p>
+          <ul class="footer-social list">
+            <li class="footer-icon-social">
+              <a class="footer-icon-link" href="#"
+                ><svg class="footer-social-icon">
+                  <use
+                    href="./imeges/symbol-defs.svg#icon-instagram2"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="footer-icon-social">
+              <a class="footer-icon-link" href="#"
+                ><svg class="footer-social-icon">
+                  <use href="./imeges/symbol-defs.svg#icon-twitter2"></use></svg
+              ></a>
+            </li>
+            <li class="footer-icon-social">
+              <a class="footer-icon-link" href="#"
+                ><svg class="footer-social-icon">
+                  <use
+                    href="./imeges/symbol-defs.svg#icon-facebook2"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="footer-icon-social">
+              <a class="footer-icon-link" href="#"
+                ><svg class="footer-social-icon">
+                  <use
+                    href="./imeges/symbol-defs.svg#icon-linkedin2"
+                  ></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
