добавил эффект ховера в портфолио

--- a/index.html
+++ b/index.html
@@ -381,65 +381,69 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="#"
+      <div class="container footer-container">
+        <div class="contackt-wrap">
+         <a class="footer-logo" href="#"
           ><span class="color-blu">Web</span
           ><span class="color-white">Studio</span></a
         >
-      </div>
-      <div class="container">
-        <address class="address">
-          <ul class="list">
-            <li>
-              <span class="address-name">м. Київ, пр-т Лесі Українки, 26</span>
-            </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="address-mail list"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="address-tel list"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-        <div class="footer-container container">
-          <p class="footer-title-social">приєднуйтесь</p>
-          <ul class="footer-social list">
-            <li class="footer-icon-social">
-              <a class="footer-icon-link" href="#"
-                ><svg class="footer-social-icon">
-                  <use
-                    href="./imeges/symbol-defs.svg#icon-instagram2"
-                  ></use></svg
-              ></a>
-            </li>
-            <li class="footer-icon-social">
-              <a class="footer-icon-link" href="#"
-                ><svg class="footer-social-icon">
-                  <use href="./imeges/symbol-defs.svg#icon-twitter2"></use></svg
-              ></a>
-            </li>
-            <li class="footer-icon-social">
-              <a class="footer-icon-link" href="#"
-                ><svg class="footer-social-icon">
-                  <use
-                    href="./imeges/symbol-defs.svg#icon-facebook2"
-                  ></use></svg
-              ></a>
-            </li>
-            <li class="footer-icon-social">
-              <a class="footer-icon-link" href="#"
-                ><svg class="footer-social-icon">
-                  <use
-                    href="./imeges/symbol-defs.svg#icon-linkedin2"
-                  ></use></svg
-              ></a>
-            </li>
-          </ul>
-        </div>
+          <address class="address">
+            <ul class="list">
+              <li>
+                <span class="address-name"
+                  >м. Київ, пр-т Лесі Українки, 26</span
+                >
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="address-mail list"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="address-tel list"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+          </div>
+          <div class="social-wrap">
+            <p class="footer-title-social">приєднуйтесь</p>
+            <ul class="footer-social list">
+              <li class="footer-icon-social">
+                <a class="footer-icon-link" href="#"
+                  ><svg class="footer-social-icon">
+                    <use
+                      href="./imeges/symbol-defs.svg#icon-instagram2"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="footer-icon-social">
+                <a class="footer-icon-link" href="#"
+                  ><svg class="footer-social-icon">
+                    <use
+                      href="./imeges/symbol-defs.svg#icon-twitter2"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="footer-icon-social">
+                <a class="footer-icon-link" href="#"
+                  ><svg class="footer-social-icon">
+                    <use
+                      href="./imeges/symbol-defs.svg#icon-facebook2"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="footer-icon-social">
+                <a class="footer-icon-link" href="#"
+                  ><svg class="footer-social-icon">
+                    <use
+                      href="./imeges/symbol-defs.svg#icon-linkedin2"
+                    ></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
       </div>
     </footer>
   </body>
