--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 
           <!-- Портфолио работ -->
           <ul class="card list">
-            <li class="item">
+            <li class="item portf-list">
               <a href="" class="card-img list"
                 ><img
                   class="img-project"
@@ -87,7 +87,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item portf-list">
               <a href="" class="card-img list">
                 <img
                   class="img-project"
@@ -103,7 +103,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item portf-list">
               <a href="" class="card-img list">
                 <img
                   class="img-project"
@@ -117,7 +117,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item portf-list">
               <a href="" class="card-img list">
                 <img
                   class="img-project"
@@ -131,7 +131,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item portf-list">
               <a href="" class="card-img list">
                 <img
                   class="img-project"
@@ -145,7 +145,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item portf-list">
               <a href="" class="card-img list">
                 <img
                   class="img-project"
@@ -161,7 +161,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item portf-list">
               <a href="" class="card-img list">
                 <img
                   class="img-project"
@@ -177,7 +177,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item portf-list">
               <a href="" class="card-img list">
                 <img
                   class="img-project"
@@ -191,7 +191,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item portf-list">
               <a href="" class="card-img list">
                 <img
                   class="img-project"
@@ -212,22 +212,67 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="#">
-          <span class="color-blu" lang="en">Web</span>
-          <span class="color-white" lang="en">Studio</span>
-        </a>
-      </div>
-      <div class="container">
-        <address class="address">
-          <span class="address-name">м. Київ, пр-т Лесі Українки, 26</span>
-          <a href="mailto:info@devstudio.com" class="address-mail list"
-            >info@devstudio.com</a
+      <div class="container footer-container">
+        <div class="contackt-wrap">
+          <a class="footer-logo" href="#"
+            ><span class="color-blu">Web</span
+            ><span class="color-white">Studio</span></a
           >
-          <a href="tel:+380961111111" class="address-tel list"
-            >+38 096 111 11 11</a
-          >
-        </address>
+          <address class="address">
+            <ul class="list">
+              <li>
+                <span class="address-name"
+                  >м. Київ, пр-т Лесі Українки, 26</span
+                >
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="address-mail list"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="address-tel list"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social-wrap">
+          <p class="footer-title-social">приєднуйтесь</p>
+          <ul class="footer-social list">
+            <li class="footer-icon-social">
+              <a class="footer-icon-link" href="#"
+                ><svg class="footer-social-icon">
+                  <use
+                    href="./imeges/symbol-defs.svg#icon-instagram2"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="footer-icon-social">
+              <a class="footer-icon-link" href="#"
+                ><svg class="footer-social-icon">
+                  <use href="./imeges/symbol-defs.svg#icon-twitter2"></use></svg
+              ></a>
+            </li>
+            <li class="footer-icon-social">
+              <a class="footer-icon-link" href="#"
+                ><svg class="footer-social-icon">
+                  <use
+                    href="./imeges/symbol-defs.svg#icon-facebook2"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="footer-icon-social">
+              <a class="footer-icon-link" href="#"
+                ><svg class="footer-social-icon">
+                  <use
+                    href="./imeges/symbol-defs.svg#icon-linkedin2"
+                  ></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
